@@ -71,6 +71,10 @@ $(function() {
                     "DateBroughtIn>='$ASK DATE {0}$' AND DateBroughtIn<='$ASK DATE {1}$'"
                     .replace("{0}", _("Entered the shelter between"))
                     .replace("{1}", _("and")) ],
+                [ _("Date of birth between two dates"), "dobtwodates", 
+                    "DateOfBirth>='$ASK DATE {0}$' AND DateOfBirth<='$ASK DATE {1}$'"
+                    .replace("{0}", _("Date of birth between"))
+                    .replace("{1}", _("and")) ],
                 [ _("Deceased"), "deceased", "DeceasedDate Is Not Null" ],
                 [ _("Died between two dates"), "diedtwodates", 
                     "DeceasedDate>='$ASK DATE {0}$' AND DeceasedDate<='$ASK DATE {1}$'"
